--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://api.fontshare.com/v2/css?f[]=bonny@100,300,400,500,700,1&display=swap"
       rel="stylesheet"
     />
-    <title>swe-jewelry</title>
+    <title>Swe Jewelry</title>
   </head>
   <body>
     <div id="root"></div>
